--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>My Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
+
     <body>
-        <h1>Hello! I'm Kevin and This is my Website.</h1>
-        <p> I'm a Aspiring Web Developer!</p>
+        <header class="header">
+            <div class ="nav-color">
+            <a href="#" class="logo">Portfolio.</a>
+            <nav class="navbar">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Skills</a>
+                <a href="#">Seminars Attended</a>
+                <a href="#">Contact</a>
+            </nav>
+            </div>
+        </header>
+
+        <section class="home">
+            <div class="home-content">
+                <h3>Hello, It's me</h3>
+                <h1>John Kevin Mampusti</h1>
+                <h3>I'm a <span>Computer Engineer</span></h3>
+                <p>
+                    I am a passionate computer engineer. My goal is to leverage my skills and knowledge 
+                    to contribute to the advancement of technology.
+                </p>
+                
+                <div class="social-media">
+                    <h5 class="visit">Visit me:</h5> 
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-twitter'></i></a>
+                    <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                </div>
+                    <a href="#" class="btn">Download Resume</a>
+            </div>  
+
+            <div class="home-img">
+                <img src="C:\Users\MICUA\Desktop\Mampusti,John Kevin.png" alt="profile">
+            </div>
+    
+        </section>
+
+        <script src ="script.js"></script>
     </body>
 </html>
