--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 
                 <div class="social-media">
                     
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://www.facebook.com/JKvNMampusti14/"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.linkedin.com/in/john-kevin-mampusti-704657272/"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.instagram.com/___kvnnnnnn/"><i class='bx bxl-instagram-alt'></i></a>
+                    <a href="https://www.linkedin.com/in/john-kevin-mampusti-704657272/"><i class='bx bxl-linkedin' ></i></a>
                 </div>
-                    <a href="#" class="btn">Download Resume</a>
+                    <a href="resume/Resume.pdf" class="btn">Download Resume</a>
             </div>  
 
             <div class="home-img">
@@ -65,21 +65,19 @@
             </div>
         </section>
 
-        <!-- project section design -->
+        <!-- Project section design -->
         <section class="project" id="project">
             <h2 class="heading">Projects</h2>
             <div class="project-container">
                 <div class="project-box">
-                    <i class='bx bx-code-alt'></i>
                     <h3>Cat Photo app</h3>
                     <div class="coffee-img">
                         <img src="images/registration-form.png" alt="">
                     </div>
-                    <a href="#" class="btn">View Code</a>
+                    <a href="https://github.com/JohnKevinMampusti/Mini-projects/tree/main/Survey-Form" class="btn">View Code</a>
                 </div>
 
                 <div class="project-box">
-                    <i class='bx bx-code-alt'></i>
                     <h3>Survey Form</h3>
                     <div class="coffee-img">
                         <img src="images/coffee app.png" alt="">
@@ -88,7 +86,6 @@
                 </div>
 
                 <div class="project-box">
-                    <i class='bx bx-code-alt'></i>
                     <h3>Cafe Menu</h3>
                     <div class="coffee-img">
                         <img src="images/coffee app.png" alt="">
@@ -98,7 +95,7 @@
             </div>
         </section>
 
-        <!-- seminars section design -->
+        <!--Seminars section design -->
         <section class="seminar" id="seminar">
             <h2 class="heading">Seminars Attended</h2>
             <div class="seminar-container">
@@ -141,7 +138,7 @@
                 <div class="seminar-box">
                     <img src="images/certificate5.png" alt="">
                     <div class="seminar-layer">
-                       <h4>Role of Cyeber Threat Intellegence in Cybersecurity</h4> 
+                       <h4>Role of Cyber Threat Intellegence in Cybersecurity</h4> 
                        <p>The seminar discussed UI and UX design basics, emphasizing prototyping's importance. UI design focuses on visual elements like layout, typography, and color schemes, while UX design emphasizes user experience and ease of use.</p>
                         <a href="#" ><i class='bx bx-link-external'></i></a>
                     </div>
@@ -156,6 +153,22 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- Contact section design -->
+        <section class="contact" id="contact">
+            <h2 class="heading">Contact Me!</h2>
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email Address">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Mobile Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </form>
         </section>
         <script src ="script.js"></script>
     </body>
